--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "docs:build": "vuepress build docs"
   },
   "dependencies": {
-    "@metaplex/js": "^4.10.1",
+    "@metaplex-foundation/mpl-token-metadata": "^1.2.5",
+    "@metaplex/js": "^4.12.0",
     "@solana/spl-token": "^0.2.0",
     "@solana/web3.js": "^1.37.1",
     "@vuepress/plugin-google-analytics": "^2.0.0-beta.27",
@@ -22,6 +23,10 @@
   },
   "devDependencies": {
     "@types/bs58": "^4.0.1",
-    "@types/node": "^16.11.6"
+    "@types/node": "^16.11.32",
+    "install": "^0.13.0",
+    "ts-node": "^10.7.0",
+    "tslib": "^2.4.0",
+    "typescript": "^4.6.4"
   }
 }
